# itti_academy

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PRESENTATION_REPORT.md  README.md  design-system.md  docker-compose.yml  docker-entrypoint.sh  uendi.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/generation/: generator.py  guardrails.py
backend/app/ingestion/: chunker.py  embedder.py  loader.py  scraper.py
backend/app/retrieval/: augmenter.py  reranker.py  retriever.py
frontend/: CLAUDE.md  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  MessageBubble.tsx  Sidebar.tsx  SourceCitation.tsx  ThinkingIndicator.tsx
frontend/src/components/ui/: ai-input.tsx  button.tsx
frontend/src/types/: chat.ts
mvp/: app.py  ingest.py  rag.py  requirements.txt
